<resources>
    <string name="app_name">QYPlus</string>

    <!--管理模块-->
    <string name="str_txtv_manage_title">管理</string>
    <string name="str_txtv_audit_accounts">审核账目</string>
    <string name="str_txtv_customer_manage">客户管理</string>
    <string name="str_txtv_supplier_manage">供应商管理</string>
    <string name="str_txtv_project_manage">项目管理</string>
    <string name="str_txtv_department_manage">部门管理</string>
    <string name="str_txtv_employee_manage">职员管理</string>
    <string name="str_txtv_income_type">收入类别</string>
    <string name="str_txtv_expend_type">支出类别</string>
    <string name="str_txtv_parities_setting">汇率设置</string>
    <string name="str_txtv_account_detail">账户明细账</string>

    <string name="str_txtv_subtract_date">&lt;</string>
    <string name="str_txtv_add_date">&gt;</string>
    <string name="str_txtv_customer">客户</string>
    <string name="str_txtv_customer_add">客户新增</string>
    <string name="str_txtv_customer_edit">客户编辑</string>
    <string name="str_txtv_supplier">供应商</string>
    <string name="str_txtv_supplier_add">供应商新增</string>
    <string name="str_txtv_supplier_edit">供应商编辑</string>
    <string name="str_txtv_project">项目管理</string>
    <string name="str_txtv_project_add">新增项目</string>
    <string name="str_txtv_project_edit">编辑项目</string>
    <string name="str_txtv_department">部门管理</string>
    <string name="str_txtv_department_add">新增部门</string>
    <string name="str_txtv_department_edit">编辑部门</string>
    <string name="str_txtv_employee">职员</string>
    <string name="str_txtv_employee_add">职员新增</string>
    <string name="str_txtv_employee_edit">职员编辑</string>

    <string name="str_txtv_incometype">收入类别</string>
    <string name="str_txtv_incometype_add">新增收入类别</string>
    <string name="str_txtv_incometype_edit">编辑收入类别</string>

    <string name="str_txtv_expendtype">支出类别</string>
    <string name="str_txtv_expendtype_add">新增支出类别</string>
    <string name="str_txtv_expendtype_edit">编辑支出类别</string>

    <string name="str_txtv_parities_add">新增汇率</string>
    <string name="str_txtv_parities_edit">编辑汇率</string>
    <string name="str_txtv_bulk_import">批量导入</string>
    <string name="str_edit_search">搜索</string>
    
    <!-- 相机提示 -->
    <string name="str_text_dialog_prompt_photograph">请拍照</string>
    <string name="str_text_dialog_prompt">选择方式</string>
    <string name="str_selected_photo">相册选取</string>
    <string name="str_selected_camera">立即拍照</string>
    <string name="str_text_dialog_commit">确定</string>
    <string name="str_text_dialog_cancel">取消</string>

    <string name="str_image_cant_bigger">图片不能大于2M，请重新选择！</string>
    <string name="str_permission_sd">您没有SD读取权限！</string>
    <string name="str_permission_camera">您没有拍照权限！</string>
    <string name="str_common_readfile_fail">读取文件失败</string>
    <string name="str_cannot_input_cn">此处禁止输入中文</string>

    <!-- 主页 -->
    <string name="tab_home">首页</string>
    <string name="tab_account">账户</string>
    <string name="tab_stock">库存</string>
    <string name="tab_tax">报税</string>
    <string name="tab_setting">设置</string>
    <string name="main_record">记一笔</string>
    <string name="record_out">支出</string>
    <string name="record_in">收入</string>
    <string name="record_lend_in">借入</string>
    <string name="record_lend_out">借出</string>
    <!-- 我的 -->
    <string name="str_child_user">子用户</string>
    <string name="str_help">新手帮助</string>
    <string name="str_suggestion_feedback">意见反馈</string>
    <string name="str_about">关于</string>
    <!-- 库存 -->
    <string name="stock_month_sales">本月销售额</string>
    <string name="stock_all_stock">总库存</string>
    <string name="stock_store_manger">仓库管理</string>
    <string name="stock_goods_manger">货品管理</string>
    <string name="stock_goods_pice">参考售价：</string>
    <string name="stock_num">库存：</string>
    <!-- 库存 -->

    <!-- home-->
    <string name="home_tip1">数据已备份至服务器，请登录电脑查看并体验更多功能。</string>
    <string name="home_tip2">网址：www.qiyicai.com</string>

    <!--  个人信息 -->

    <string name="my_name">我</string>
    <string name="head_portraits">头像</string>
    <string name="id_name">ID</string>
    <string name="persional_name">姓名</string>
    <string name="persional_name_hint">请设姓名</string>
    <string name="duty_name">职务</string>
    <string name="type_name">类型</string>
    <string name="type_name_hint">主客户</string>
    <string name="mail_name">邮箱</string>
    <string name="mail_name_hint">未绑定</string>
    <string name="phone_name">手机</string>
    <string name="update_pwd_name">修改密码</string>
    <string name="company_name_title">公司</string>
    <string name="company_name">公司名</string>
    <string name="company_name_hint">请设公司名</string>
    <string name="area_name">地区</string>
    <string name="area_name_hint">请设地区</string>
    <string name="industry_type_name">行业类型</string>
    <string name="industry_type_name_hint">请设行业类型</string>
    <string name="vip_date_name">Vip期限</string>
    <string name="vip_date_name_hint">2016-09-02至2016-10-02</string>
    <string name="max_user_name">最大用户数</string>
    <string name="max_user_name_hint">3(含主用户)</string>
    <!--  网络相关 -->
    <string name="str_error_no_net_msg">加载失败，请检查网络设置。</string>
    <!--  修改邮箱 -->
    <string name="btn_next">下一步</string>
    <string name="str_mail_input">输入新邮箱</string>
    <string name="str_phone_input">输入新手机</string>
    <string name="str_name_input">请设姓名</string>
    <string name="str_company_name_input">请设公司名</string>
    <!--  修改密码 -->
    <string name="s_txtv_old_pwd">旧密码</string>
    <string name="s_txtv_old_pwd_hint">请输入旧密码</string>
    <string name="s_txtv_new_pwd">新密码</string>
    <string name="s_txtv_confirm_pwd">密码确认</string>
    <string name="s_txtv_new_pwd_hint">请填写新设置的密码</string>
    <string name="s_txtv_confirm_pwd_hint">请再次输入新填写的密码</string>
    <string name="btn_update_pwd">完成</string>
    <!--  用户管理 -->
    <string name="s_txtv_normal_user">正常</string>
    <string name="s_txtv_delete_user">已删除</string>
    <string name="s_txtv_user_name">姓名</string>
    <string name="s_txtv_user_mail">邮箱</string>
    <string name="s_txtv_user_phone">手机</string>
    <string name="s_txtv_user_pwd">密码</string>

    <!-- 应收款 -->
    <string name="s_txtv_tab_uncollected">应收</string>
    <string name="s_txtv_tab_received">已收</string>
    <string name="s_txtv_tab_summary">汇总</string>
    <string name="s_txtv_tab_due">应付</string>
    <string name="s_txtv_tab_paid">已付</string>
    <!-- 应收款 -->

    <!--  报税 -->
    <string name="s_txtv_tax">立即申请</string>
    <string name="s_txtv_tax_service_hotline">服务热线：</string>
    <string name="s_txtv_tax_national_chain">全国连锁</string>
    <string name="s_txtv_tax_standard">标准化</string>
    <string name="s_txtv_tax_realtime_monitor">实时监控</string>
    <string name="s_txtv_tax_steady">稳定可靠</string>
    <string name="s_txtv_tax_type">纳税人类型</string>
    <string name="s_txtv_tax_area">地区</string>
    <string name="s_txtv_tax_company">公司名</string>
    <string name="s_txtv_tax_industry_type">行业类型</string>
    <string name="s_txtv_tax_name">姓名</string>
    <string name="s_txtv_tax_phone">手机</string>
    <string name="s_txtv_tax_hint">请核对您的信息</string>
    <string name="s_txtv_tax_type_hint">请选择纳税人类型</string>
    <string name="s_txtv_tax_area_hint">请选择地区</string>
    <string name="s_txtv_tax_company_hint">请设公司名</string>
    <string name="s_txtv_tax_Industry_hint">请选择行业类型</string>
    <string name="s_btn_tax_">确定申请</string>
</resources>
