<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title"></include>
    <!--报税头img-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_tax_title"/>
    <!--立即申请按钮-->
    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="50dip"
        android:background="@color/orange_theme"
        android:text="@string/s_txtv_tax"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_middle" />
    <!--服务热线-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:id="@+id/ll_service_hotLine"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:text="@string/s_txtv_tax_service_hotline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtv_service_hotline"
            android:textSize="@dimen/text_size_big"
            android:text="4006-360-658"/>
    </LinearLayout>
    <!--底部四个图标-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/ll_information">
        <!-- 全国连锁 -->
        <RadioButton
            android:id="@+id/rbtn_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:button="@null"
            android:clickable="false"
            android:checked="false"
            android:text="@string/s_txtv_tax_national_chain"
            android:gravity="center"
            android:drawableTop="@drawable/img_national_chain"
            android:textColor="@drawable/selector_radio_text_color_tab" />
        <!-- 标准化 -->
        <RadioButton
            android:id="@+id/rbtn_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:button="@null"
            android:text="@string/s_txtv_tax_standard"
            android:clickable="false"
            android:gravity="center"
            android:drawableTop="@drawable/img_standardization"
            android:textColor="@drawable/selector_radio_text_color_tab" />
        <!-- 实时监控 -->
        <RadioButton
            android:id="@+id/rbtn_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:button="@null"
            android:clickable="false"
            android:text="@string/s_txtv_tax_realtime_monitor"
            android:gravity="center"
            android:drawableTop="@drawable/img_realtime_monitor"
            android:textColor="@drawable/selector_radio_text_color_tab" />
        <!-- 稳定可靠 -->
        <RadioButton
            android:id="@+id/rbtn_tax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:button="@null"
            android:clickable="false"
            android:text="@string/s_txtv_tax_steady"
            android:gravity="center"
            android:drawableTop="@drawable/img_steady"
            android:textColor="@drawable/selector_radio_text_color_tab" />

    </LinearLayout>

</LinearLayout>

