<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_gray"
    android:orientation="vertical">

    <!-- title layout -->
    <include layout="@layout/layout_title" />

    <!-- 用户头像及信息区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <!-- 上半部信息区域 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/black_color_20" />
            <!-- 纳税人类型 Layout -->
            <RelativeLayout
                android:id="@+id/rl_tax_type"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="46dp">
                <!-- 分割线 -->

                <!-- 纳税人类型 提示文字 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="@string/s_txtv_tax_type" />
                <!-- 纳税人类型 内容文字 -->
                <TextView
                    android:id="@+id/textv_taxt_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textSize="@dimen/text_size_middle"
                    android:hint="请选择纳税人类型" />
                <!-- 右箭头 -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_back_right" />
                <!-- 分割线 -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_color_20" />

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/text_size_small"
                android:text="@string/s_txtv_tax_hint" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/black_color_20" />
            <!-- 地区 Layout -->
            <RelativeLayout
                android:id="@+id/rl_tax_area"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="46dp">
                <!-- 地区提示文字-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="@string/s_txtv_tax_area" />
                <!-- 地区 内容文字-->
                <TextView
                    android:id="@+id/textv_tax_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:hint="@string/s_txtv_tax_area_hint" />
                <!-- 右箭头 -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_back_right" />
                <!-- 分割线 -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_color_20" />

            </RelativeLayout>
            <!-- 公司名 Layout -->
            <RelativeLayout
                android:id="@+id/rl_tax_company"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="46dp">
                <!--公司名提示文字 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="@string/s_txtv_tax_company" />
                <!-- 公司名 内容文字 -->
                <TextView
                    android:id="@+id/textv_tax_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:layout_marginRight="30dp"
                    android:hint="@string/s_txtv_tax_company_hint" />

                <!-- 分割线 -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_color_20" />

            </RelativeLayout>
        </LinearLayout>
        <!-- 行业类型 Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 行业类型 Layout -->
            <RelativeLayout
                android:id="@+id/rl_tax_Industry"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="46dp">
                <!-- 行业类型提示文字-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="@string/s_txtv_tax_industry_type" />
                <!-- 行业类型 内容文字-->
                <TextView
                    android:id="@+id/textv_industry_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:hint="@string/s_txtv_tax_Industry_hint" />
                <!-- 右箭头 -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_back_right" />
                <!-- 分割线 -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_color_20" />

            </RelativeLayout>
            <!-- 姓名 Layout -->
            <RelativeLayout
                android:id="@+id/rl_tax_name"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="46dp">
                <!-- 姓名提示文字-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="@string/s_txtv_tax_name" />
                <!-- 姓名 内容文字-->
                <TextView
                    android:id="@+id/textv_tax_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="张三" />

                <!-- 分割线 -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_color_20" />

            </RelativeLayout>
            <!-- 手机 Layout -->
            <RelativeLayout
                android:id="@+id/rl_tax_phone"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="46dp">
                <!-- 手机 提示文字-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="@string/s_txtv_tax_phone" />
                <!-- 手机 内容文字-->
                <TextView
                    android:id="@+id/textv_tax_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorAllTextBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:text="123456789" />
                <!-- 分割线 -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_color_20" />
            </RelativeLayout>
        </LinearLayout>
        <!-- 下一步按钮 -->
        <Button
            android:id="@+id/btn_conform_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="30dip"
            android:text="@string/s_btn_tax_"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_middle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/ll_service_hotLine"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:text="@string/s_txtv_tax_service_hotline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtv_service_hotline"
            android:textSize="@dimen/text_size_big"
            android:text="4006-360-658"/>
    </LinearLayout>
    <include layout="@layout/activity_choose_dialog" />
</LinearLayout>
